Dispatcher view fix for overlaping drivers, at least for now this is what i can afford without refactoring :)

--- a/src/Food/AppBundle/Resources/public/styles/admin_style.css
+++ b/src/Food/AppBundle/Resources/public/styles/admin_style.css
@@ -9,7 +9,7 @@ h4.padded {
 
 .city_list {
     display: inline-block;
-    width: 1275px;
+    width: 1325px;
     vertical-align: top;
 }
 
@@ -52,6 +52,12 @@ h4.padded {
 .order_list td.order_status {
     text-align: center;
     white-space: nowrap;
+}
+
+.order_list td.order_status button {
+    width: 52px;
+    padding-left: 7px;
+    padding-right: 7px;
 }
 
 .order_list td.driver {
